[gd_scene load_steps=13 format=3 uid="uid://60tda85jp7ru"]

[ext_resource type="FontFile" uid="uid://dp3leh3q1lctk" path="res://assets/fonts/ShantellSans-VariableFont.ttf" id="1_akhhq"]
[ext_resource type="Script" path="res://scenes/ButtonContainer.gd" id="2_ad6tn"]
[ext_resource type="Theme" uid="uid://bc44ulks4c077" path="res://assets/themes/ButtonThemeBlue.tres" id="3_bpwdo"]
[ext_resource type="Script" path="res://scenes/LoadGameMode.gd" id="4_3gih1"]
[ext_resource type="Theme" uid="uid://dmoh2xwkfhd0n" path="res://assets/themes/ButtonThemeGrey.tres" id="4_5w8hp"]
[ext_resource type="Script" path="res://DevlogScroll.gd" id="5_rjvhs"]
[ext_resource type="FontFile" uid="uid://bwarup1ao013v" path="res://assets/fonts/SourceCodePro-VariableFont_wght.ttf" id="6_q8j6d"]
[ext_resource type="FontFile" uid="uid://b8s1afwbggr2j" path="res://assets/fonts/CantedComic Bold.otf" id="7_yohth"]

[sub_resource type="Gradient" id="Gradient_17dgd"]
colors = PackedColorArray(1, 1, 1, 1, 0.976471, 1, 0.596078, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1egm1"]
gradient = SubResource("Gradient_17dgd")
fill_from = Vector2(0.0747863, 0.615385)
fill_to = Vector2(0.619658, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijflt"]
content_margin_left = 10.0
content_margin_top = 7.0
bg_color = Color(0, 0, 0, 0.54902)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0, 0, 0, 0.780392)
corner_radius_top_left = 7
corner_radius_top_right = 7

[sub_resource type="Theme" id="Theme_xwnt5"]
ScrollContainer/styles/panel = SubResource("StyleBoxFlat_ijflt")

[node name="menu" type="Node2D"]

[node name="ColorRect" type="TextureRect" parent="."]
offset_right = 900.0
offset_bottom = 1100.0
texture = SubResource("GradientTexture2D_1egm1")

[node name="BingoTitleLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 310.0
offset_right = 525.0
offset_bottom = 653.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.436332
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -130
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("1_akhhq")
theme_override_font_sizes/normal_font_size = 150
theme_override_font_sizes/bold_font_size = 150
theme_override_font_sizes/italics_font_size = 150
theme_override_font_sizes/bold_italics_font_size = 150
theme_override_font_sizes/mono_font_size = 150
text = "MOVIE BINGO"
fit_content = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
offset_left = 570.0
offset_top = 200.0
offset_right = 870.0
offset_bottom = 900.0
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
alignment = 1
script = ExtResource("2_ad6tn")

[node name="ButtonEasy" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_bpwdo")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 38
text = "Easy (3x3)"

[node name="Control" type="Control" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonMedium" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_bpwdo")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 38
text = "Medium (4x4)"

[node name="Control2" type="Control" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonHard" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_bpwdo")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 38
text = "Hard (5x5)"

[node name="Control3" type="Control" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonDaring" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_bpwdo")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 38
text = "Daring (6x6)"

[node name="ButtonOptions" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
offset_left = 14.0
offset_top = 824.0
offset_right = 161.0
offset_bottom = 874.0
theme = ExtResource("4_5w8hp")
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Options"

[node name="ButtonLoadMode" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
offset_left = 16.0
offset_top = 896.0
offset_right = 199.0
offset_bottom = 946.0
theme = ExtResource("4_5w8hp")
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Load \"Conspiracies\""
script = ExtResource("4_3gih1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 327.0
offset_top = 1029.0
offset_right = 739.0
offset_bottom = 1092.0
theme = SubResource("Theme_xwnt5")
scroll_vertical = 40
script = ExtResource("5_rjvhs")

[node name="DevLog" type="Label" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_q8j6d")
theme_override_font_sizes/font_size = 16
text = "0.0.1 Basic bingo game
0.0.2 Added configurable board size
0.1.0 Added images to board
0.1.1 Fixed image scaling
0.1.2 Added back button to board
0.1.3 Redesigned menu page
0.1.4 Prettied up the board layout
0.1.5 Added (disabled) pruning feature for testing
0.1.6 Added artist credit and this box
0.2.0 New feature, board pruning available before game start
0.2.1 Tweaked menu font
0.3.0 New feature, scoring system
0.3.1 bugfix, disabled pruning when ticking a box
0.3.2 UI improvement, retooled prune button for readability
0.4.0 added shader for easier readability during pruning
0.4.1 Fixed mislabeled button"
autowrap_mode = 3

[node name="Credits" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 966.0
offset_right = 312.0
offset_bottom = 1090.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_yohth")
theme_override_font_sizes/font_size = 20
text = "Art by
@madrid_toons
madridtoons.bsky.social
Game by @badgertide"

[connection signal="pressed" from="ButtonContainer/ButtonEasy" to="ButtonContainer" method="_on_button_easy_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonMedium" to="ButtonContainer" method="_on_button_medium_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonHard" to="ButtonContainer" method="_on_button_hard_pressed"]
[connection signal="pressed" from="ButtonContainer/ButtonDaring" to="ButtonContainer" method="_on_button_daring_pressed"]
[connection signal="pressed" from="ButtonOptions" to="ButtonContainer" method="_on_button_options_pressed"]
[connection signal="pressed" from="ButtonLoadMode" to="ButtonLoadMode" method="_on_pressed"]
